Removed extra space from issue actions

--- a/static/style.css
+++ b/static/style.css
@@ -275,7 +275,6 @@ form.unit_selector {
 }
 
 .page_head .actions {
-  margin-left: 10px;
   margin-top: 0.5ex;
   margin-bottom: 1ex;
 }
